# customer/request/CustomerLoginRequest.go
@@ -1,0 +1,6 @@
+package request
+
+type CustomerLoginRequest struct {
+	Email    string `json:"email`
+	Password string `json:"password"`
+}
