# customer/request/CustomerRegisterRequest.go
@@ -1,6 +1,6 @@
 package request
 
-type CustomerRequest struct {
+type CustomerRegisterRequest struct {
 	Email    string `json:"email`
 	Username string `json:"username"`
 	Password string `json:"password"`
