# docs/swagger.json
@@ -70,7 +70,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CustomerRequest"
+                            "$ref": "#/definitions/request.CustomerLoginRequest"
                         }
                     }
                 ],
@@ -104,7 +104,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CustomerRequest"
+                            "$ref": "#/definitions/request.CustomerRegisterRequest"
                         }
                     }
                 ],
@@ -259,7 +259,18 @@
                 }
             }
         },
-        "request.CustomerRequest": {
+        "request.CustomerLoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.CustomerRegisterRequest": {
             "type": "object",
             "properties": {
                 "email": {
